# certpin

./: .gitignore  README.md  RFC.md
android/: README.md
android/src/main/java/com/certpin/: CertPin.kt
android/src/test/java/com/certpin/: CertPinTest.kt
cpp/: CMakeLists.txt  README.md
cpp/include/certpin/: certpin.hpp
cpp/src/: certpin.cpp
cpp/tests/: test_certpin.cpp
ios/: Package.swift  README.md
ios/Sources/CertPin/: CertPin.swift
ios/Tests/CertPinTests/: CertPinTests.swift
rust/: Cargo.toml  README.md
rust/src/: lib.rs
